# Prediction_Royale

./: .eslintrc.json  .gitignore  Anchor.toml  README.md  jest.config.ts  jest.setup.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
__tests__/: LivesIndicator.test.tsx  PredictionButtons.test.tsx  RoomCard.test.tsx  RoundCountdown.test.tsx
app/: layout.tsx  page.tsx
app/room/[id]/: page.tsx
idl/: prediction_royale.json
programs/prediction_royale/: Cargo.toml  Xargo.toml
programs/prediction_royale/src/: lib.rs
src/: providers.tsx
src/app/: globals.css  page.tsx
src/app/room/[id]/: page.tsx
src/components/: ClaimPrizeButton.tsx  LivesIndicator.tsx  PredictionButtons.tsx  PriceChart.tsx  RoomCard.tsx  RoomGrid.tsx  RoundCountdown.tsx  RoundResultOverlay.tsx  WalletConnectModal.tsx
src/hooks/: useAnchorProgram.ts  useGameActions.ts  useLocalStorage.ts  usePythPrice.ts  useRoomSubscription.ts  useWalletPersistence.ts
src/types/: anchor.ts  prediction_royale.ts
tests/: six_seven.ts
